--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,9 +12,9 @@
         <link rel="stylesheet" type="text/css" href="/stylesheets/<%= style %>.css" />
     <% }); %>
 
-    	<script type="text/javascript" src="scripts/jquery.min.js"></script>
+    	<script type="text/javascript" src="/scripts/jquery.min.js"></script>
     <% scripts.forEach(function(script) { %>
-        <script type="text/javascript" src="scripts/<%= script %>.js"></script>
+        <script type="text/javascript" src="/scripts/<%= script %>.js"></script>
     <% }); %>
 		<%- include('metrics') %>
   </head>
