--- a/views/opid.ejs
+++ b/views/opid.ejs
@@ -1,149 +1,4 @@
-
-<html>
-	<head>
-    <meta charset="utf-8">
-		<title>Transaction - Zero-Knowlegde Bank</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/fonts.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/wallet.css" />
-		<script type="text/javascript" src="/scripts/jquery.min.js"></script>
-		<style type="text/css">
-				body
-				{
-					display: flex;
-					flex-direction: column;
-					min-height: 100%;
-				}
-				header
-				{
-					flex-grow: 0;
-				}
-				main
-				{
-					flex-grow: 1;
-				}
-				footer
-				{
-					flex-grow: 0;
-				}
-			.txstatus_help
-			{
-				text-align: right;
-				color: #949494;
-			}
-			main
-			{
-				display: flex;
-				flex-direction: column;
-			}
-			.tx_container
-			{
-				display: flex;
-				flex-direction: column;
-				flex-grow: 1;
-			}
-			.tx_container > .info_block
-			{
-				display: flex;
-				flex-direction: column;
-				flex-grow: 1;
-				align-items: center;
-				justify-content: center;
-			}
-			@media(min-width: 768px)
-			{
-				.tx_container > .info_block
-				{
-					margin-bottom: 4rem;
-				}
-			}
-			.tx_container > .info_block > .info_container
-			{
-				display: flex;
-				flex-direction: column;
-				align-content: center;
-				justify-content: center;
-				flex-grow: 1;
-			}
-			.txstatus_container
-			{
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-content: center;
-				align-items: center;
-				padding: 6rem 0;
-				width: 100%;
-				max-width: 82%;
-			}
-			h1
-			{
-				margin-bottom: 1rem;
-				padding-top: 4rem;
-				font-size: 3rem;
-  				line-height: 5.5rem;
-				font-weight: 600;
-				text-align: center;
-			}
-			.selection_pending
-			{
-				color: #FF7C32;
-			}
-			.selection_success
-			{
-				color: #5BBFB2;
-			}
-			.selection_error
-			{
-				font-weight: 600;
-				color: #F25148;
-			}
-			.txstatus_statusimg
-			{
-				margin-bottom: 2rem;
-				height: 16rem;
-			}
-			.txstatus_container p
-			{
-				text-align: center;
-			}
-			.txstatus_warning
-			{
-				margin-top: 3rem;
-				padding: 1rem 5rem;
-				border: 2px solid #FF7C32;
-				border-radius: 1rem;
-				color: #FF7C32;
-				font-weight: 500;
-			}
-			.tx_link
-			{
-				border-bottom: 1px dashed #5BBFB2;
-				line-height: 4rem;
-				word-break: break-all;
-				color: #5BBFB2;
-			}
-			.button_back
-			{
-				margin-top: 4rem;
-			}
-			@media(min-width:768px)
-			{
-				.button_back
-				{
-					margin-left: auto;
-					margin-right: auto;
-					max-width: 64%;
-				}
-			}
-
-
-		</style>
-	</head>
-	<body>
+<%- include('partials/header', {title:'Transaction — Zero-Knowledge Bank', styles:['wallet', 'opid'], scripts:[] }) %>
 			<header>
 				<div class="container">
 					<div class="row flex-row align-items-center">
@@ -230,5 +85,4 @@
     		var counter = setInterval(counter, 1000);
     	</script>
   <% } %>
-	</body>
-</html>
+<%- include('partials/footer', {scripts: []}) %>
