--- a/views/opid.ejs
+++ b/views/opid.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', {title:'Transaction — Zero-Knowledge Bank', styles:['wallet', 'opid'], scripts:[] }) %>
+<%- include('partials/header', {title:'Transaction — Zero-Knowledge Bank', styles:['wallet', 'status'], scripts:[] }) %>
 			<header>
 				<div class="container">
 					<div class="row flex-row align-items-center">
