--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,11 +1,25 @@
-<!<!DOCTYPE html>
-<html>
-  <head>
-    <title>Error</title>
-  </head>
-  <body>
+<%- include('partials/header', {title:'Error — Zero-Knowledge Bank', styles:['wallet', 'status'], scripts:[] }) %>
+  <%- include('partials/status-header') %>
+
+    <main>
+      <div class="container tx_container">
+        <div class="info_block info_block_headed">
+              <div class="info_head">
+                Error
+              </div>
+              <div class="info_container txstatus_container">
+                <img src="/img/ellipsis.svg" class="txstatus_statusimg">
+                <h1><span class="selection_pening">Something went wrong...</span></h1>
+                <p>
+                  Try again later or send us link to this page in Telegram if a problem continues for too long
+                </p>
+                <a class="button button_orange button_back" href="#" onclick="window.history.back();">Go to previous page</a>
+              </div>
+        </div>
+      </div>
+    </main>
     <h1><%= message %></h1>
     <p><%= error.status %></p>
     <pre><%- error.stack %></pre>
-  </body>
-</html>
+  <%- include('partials/status-footer') %>
+<%- include('partials/footer', {scripts: []}) %>
