--- a/views/error.ejs
+++ b/views/error.ejs
@@ -11,15 +11,12 @@
                 <img src="/img/ellipsis.svg" class="txstatus_statusimg">
                 <h1><span class="selection_pening">Something went wrong...</span></h1>
                 <p>
-                  Try again later or send us link to this page in Telegram if a problem continues for too long
+                  Try again later or send us link to this page in <a href="tg://resolve?domain=zkbank">Telegram</a> if a problem continues for too long
                 </p>
                 <a class="button button_orange button_back" href="#" onclick="window.history.back();">Go to previous page</a>
               </div>
         </div>
       </div>
     </main>
-    <h1><%= message %></h1>
-    <p><%= error.status %></p>
-    <pre><%- error.stack %></pre>
   <%- include('partials/status-footer') %>
 <%- include('partials/footer', {scripts: []}) %>
