system-error [lil-fix]

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,5 @@
 <%- include('partials/header', {title:'Error — Zero-Knowledge Bank', styles:['wallet', 'status'], scripts:[] }) %>
   <%- include('partials/status-header') %>
-
     <main>
       <div class="container tx_container">
         <div class="info_block info_block_headed">
@@ -11,7 +10,7 @@
                 <img src="/img/ellipsis.svg" class="txstatus_statusimg">
                 <h1><span class="selection_pening">Something went wrong...</span></h1>
                 <p>
-                  Try again later or send us link to this page on <a href="tg://resolve?domain=zkbank">Telegram</a> if a problem continues for too long
+                  Try again later or send us a link to this page on <a href="tg://resolve?domain=zkbank">Telegram</a> if a problem continues for too long
                 </p>
                 <a class="button button_orange button_back" href="#" onclick="window.history.back();">Go to previous page</a>
               </div>
